8897: driver update to C3X15044
EEBU release 8897
SD-WLAN-SD-BT-NFC-8897-KK44_LINUX_3_10_17-T50-15.68.4.p93-15.28.4.p93-C3X15044_B0B1-GPL

Change-Id: I6e7162babbc2956550da726b6b21ce58ac0e30ca
Signed-off-by: Gannicus Guo <jiaguo@marvell.com>

--- a/drivers/marvell/sd8897/mbtc_src/README
+++ b/drivers/marvell/sd8897/mbtc_src/README
@@ -48,6 +48,7 @@
 		e.g. copy bt_cal_data.conf to firmware directory, cal_cfg=mrvl/bt_cal_data.conf
       cal_cfg_ext=<CAL data config file name>
 		e.g. copy cal_data.conf to firmware directory, cal_cfg_ext=mrvl/cal_data.conf
+	  minicard_pwrup=1|0 <power up/down on driver load/unload (default) | don't power up/down>
 
 	Note: On some platforms (e.g. PXA910/920) double quotation marks ("") need to used
 	for module parameters.
