sd8887: driver update to C3X15078
EEBU release 8887 version:
SD-WLAN-SD-BT-FM-NFC-8887-KK44_LINUX_3_10_33_M-PXA1088-15.68.7.p8-15.29.7.p8-C3X15078_A0A2-MGPL
release notes: N/A

Change-Id: I9059ad324347629858af01a0c9119cbd2c2f2393
Signed-off-by: yuwan <yuwan@marvell.com>

--- a/drivers/marvell/sd8887/wlan_src/README
+++ b/drivers/marvell/sd8887/wlan_src/README
@@ -358,6 +358,11 @@ regioncode
 		iwpriv mlan0 regioncode         : Get region code
 		iwpriv mlan0 regioncode 0x10    : Set region code to USA (0x10)
 
+	Note : in some case regioncode will be 0 after updated countycode or 80211d
+		i.e. mlanutl mlanX countrycode  (CA, JP, CN, DE, ES AT, BR, RU)
+		or uaputl.exe sys_cfg_80211d state 1 country (CA, JP, CN, DE, ES AT, BR, RU)
+		Please use cfp instead of it.
+
 cfpcode
 	This command is used to set/get the Channel-Frequency-Power table codes.
 	The region table can be selected through region code.
